added /ChillMusic at line 12

--- a/style2.css
+++ b/style2.css
@@ -9,7 +9,7 @@
 body {
   background-color: rgba(44, 34, 43, 255);
   /* background-image: url(); */
-  background-image: url(/bgs/wallpaperflare.com_wallpaper\ \(1\).jpg);
+  background-image: url(/ChillMusic/bgs/wallpaperflare.com_wallpaper\ \(1\).jpg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
