--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ nav ul li a {
   font-size: 20px;
   font-weight: lighter;
 }
+#animelofi{
+  color: pink;
+}
 @media only screen and (max-width: 661px) {
   /* .center{
         font-size: 67px;
