updated bg as gojo

--- a/style2.css
+++ b/style2.css
@@ -7,9 +7,9 @@
   color: white;
 }
 body {
-  background-color: rgba(44, 34, 43, 255);
+  background-color: rgba(164,172,210,255);
   /* background-image: url(); */
-  background-image: url(/VIBHA/bgs/wallpaperflare.com_wallpaper\ \(1\).jpg);
+  background-image: url(/VIBHA/bgs/gojo.jpg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
