--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Roboto+Flex:opsz,wght@8..144,100&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -39,8 +39,8 @@ nav ul li a {
 .hello{
   text-align: center;
   margin: 250px 20px;
-  font-family: "Roboto Flex", sans-serif;
-  font-size: 60px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 50px;
 }
 .bello{
   font-size: 20px;
